language-server/src/tests/snapshots/gleam_language_server__tests__completion__imported_unqualified_module_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep.{wobble}\n"
---
|
import dep.{wobble}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   3_dep.wobble
  desc:   app
  edits:
    [1:0-1:0]: "dep.wobble"
wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   3_wobble
  desc:   app
  edits:
    [1:0-1:0]: "wobble"
